# godinal-clap-loader

./: LICENSE  LICENSES-THIRD-PARTY.md  README.md  README_EN.md  icon.svg.import  project.godot
addons/godinal-clap-loader/: Clap插件结构.drawio  Clap插件结构.drawio.svg.import  V.A. - 一级警报BGM.mp3.import  example.tscn  godinal-clap-loader.gdextension  godinal-clap-loader.gdextension.uid  一级警报.mp3.import
addons/godinal-clap-loader/rust/: .gitignore  Cargo.toml  build-on-termux.sh
addons/godinal-clap-loader/rust/src/: cast.rs  clap_input_audio_channel_access.rs  clap_input_audio_port_access.rs  clap_output_audio_channel_access.rs  clap_output_audio_port_access.rs  clap_plugin_instance.rs  clap_transport_event_access.rs  host.rs  lib.rs  midi.rs  weak_ref.rs
addons/godinal-clap-loader/rust/src/host/: audio_access.rs  audio_processor.rs  host_handlers_impl.rs  message_processor.rs  plugin_message.rs
addons/godinal-clap-loader/rust/src/host/audio_processor/: audio_buffer.rs  event_buffer.rs
addons/godinal-clap-loader/rust/src/host/audio_processor/audio_buffer/: channel.rs  port.rs
addons/godinal-clap-loader/rust/src/host/host_handlers_impl/: host_audio_processor.rs  host_main_thread.rs  host_shared.rs
addons/godinal-clap-loader/rust/src/host/message_processor/: cli.rs  gui_embedded.rs  gui_floating.rs  message_processor_impl.rs
